@@ -16,6 +16,7 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
+#if WINAPI_XWINDOWS
 #pragma once
 #include "base/String.h"
 
@@ -26,7 +27,7 @@ namespace pugi
 
 class X11LayoutsParser {
 public:
-    static std::vector<String> getX11LanguageList(const String& pathToKeyboardFile, const String& pathToEvdevFile);
+    static std::vector<String> getX11LanguageList(const String& pathToEvdevFile);
     static String              convertLayotToISO(const String& pathToEvdevFile, const String& layoutLangCode, bool needToReloadFiles = false);
 
 private:
@@ -46,13 +47,11 @@ private:
 
     static void                convertLayoutToISO639_2(const String&        pathToEvdevFile,
                                                        bool                 needToReloadEvdev,
-                                                       std::vector<String>  layoutNames,
-                                                       std::vector<String>  layoutVariantNames,
+                                                       const std::vector<String>& layoutNames,
+                                                       const std::vector<String>& layoutVariantNames,
                                                        std::vector<String>& iso639_2Codes);
-
-    static void                parseKeyboardFile(const String&        pathToKeyboardFile,
-                                                 std::vector<String>& layoutNames,
-                                                 std::vector<String>& layoutVariantNames);
 
     static std::vector<String> convertISO639_2ToISO639_1(const std::vector<String>& iso639_2Codes);
 };
+
+#endif //WINAPI_XWINDOWS
